--- a/index.html
+++ b/index.html
@@ -3,31 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eseringo - Canlı Hava Durum Uygulaması</title>
+    <title>Real-Time Weather App - Ayvaz Eser Ölugi</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Şehir ismi giriniz..." spellcheck="false">
-            <button id="search-btn">Ara</button>
+            <button><i class="fas fa-search"></i></button>
+        </div>
+        <div class="error" style="display: none;">
+            <p>Geçersiz şehir ismi</p>
         </div>
         <div class="weather">
-            <h1 class="temp">--°C</h1>
+            <i class="fas fa-cloud weather-icon-main"></i> <h1 class="temp">--°C</h1>
             <h2 class="city">Şehir</h2>
             <div class="details">
                 <div class="col">
-                    <p>Nem</p>
-                    <span class="humidity">--%</span>
+                    <i class="fas fa-water"></i>
+                    <div>
+                        <p class="humidity">--%</p>
+                        <p>Nem</p>
+                    </div>
                 </div>
                 <div class="col">
-                    <p>Rüzgar</p>
-                    <span class="wind">-- km/s</span>
+                    <i class="fas fa-wind"></i>
+                    <div>
+                        <p class="wind">-- km/s</p>
+                        <p>Rüzgar</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <footer style="margin-top: 20px; font-size: 10px; color: #eee; opacity: 0.7;">
-            Developed by Ayvaz Eser Ölugi
+        <footer class="footer">
+            Coded by Ayvaz Eser Ölugi
         </footer>
     </div>
     <script src="script.js"></script>
